# dataset-viewer

./: .gitignore  CLAUDE.md  STARTUP_GUIDE.md  TEST_GUIDE.md  vite.config.ts
.claude/: CLAUDE.md  settings.json
dataset-viewer-backend/: Cargo.toml  Dockerfile  README.md
dataset-viewer-backend/docs/: api.md
dataset-viewer-backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
dataset-viewer-backend/src/api/: routes.rs  types.rs
dataset-viewer-backend/src/api/handlers/: archive.rs  mod.rs  storage.rs
dataset-viewer-backend/src/archive/: handlers.rs  mod.rs  types.rs
dataset-viewer-backend/src/storage/: huggingface.rs  local.rs  manager.rs  mod.rs  oss.rs  smb.rs  ssh.rs  traits.rs  types.rs  webdav.rs
dataset-viewer-backend/src/utils/: http_downloader.rs  mod.rs  path_utils.rs
dataset-viewer-backend/src/websocket/: handler.rs  manager.rs  messages.rs  mod.rs
dataset-viewer-frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dataset-viewer-frontend/public/: manifest.json
dataset-viewer-frontend/src/: App.vue  main.ts
dataset-viewer-frontend/src/assets/styles/: main.css
dataset-viewer-frontend/src/components/: JsonViewer.vue  LogViewer.vue  VirtualizedTextViewer.vue
dataset-viewer-frontend/src/components/text-viewer/: FoldingIndicator.vue  (+2 more)
dataset-viewer-frontend/src/composables/: useFoldingLogic.ts  useSyntaxHighlighting.ts
dataset-viewer-frontend/src/i18n/: index.ts
dataset-viewer-frontend/src/router/: index.ts
dataset-viewer-frontend/src/stores/: app.ts
dataset-viewer-frontend/src/utils/: folding.ts  shikiHighlighter.ts  syntaxHighlighter.ts
dataset-viewer-frontend/src/views/: AboutView.vue  BrowseView.vue  BrowseView.vue.bak  BrowseViewFixed.vue  BrowseViewWithCache.vue  HomeView.vue
src/services/: webCompressionService.ts
(+6 files in other folders)
